--- a/requirements.txt
+++ b/requirements.txt
@@ -1,145 +1,17 @@
-acres==0.1.0
-aiofiles==24.1.0
-aiogram==2.23
-aiohttp==3.8.6
-aiosignal==1.3.1
-aiosmtpd==1.4.6
-aiosmtplib==3.0.2
-alembic==1.14.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
 annotated-types==0.7.0
-antiorm==1.2.1
-anyio==4.6.2.post1
-async-timeout==4.0.3
-asyncio==3.4.3
-atpublic==5.0
-attrs==24.2.0
-Babel==2.9.1
-bcrypt==4.2.1
-beautifulsoup4==4.12.3
-blinker==1.9.0
-bs4==0.0.2
-cachelib==0.13.0
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-ci-info==0.3.0
-click==8.1.7
-colorama==0.4.6
-configobj==5.0.9
-configparser==7.1.0
-cryptography==43.0.3
-db==0.1.1
-distro==1.9.0
-dnspython==2.7.0
-docx==0.2.4
-ecdsa==0.19.0
-email_validator==2.2.0
-etelemetry==0.3.1
-exceptiongroup==1.2.2
-fastapi==0.115.4
-fastapi-mail==1.4.2
-filelock==3.16.1
-fitz==0.0.1.dev2
-Flask==3.1.0
-Flask-Dance==7.1.0
-Flask-Login==0.6.3
-Flask-Mail==0.10.0
-Flask-Migrate==4.0.7
-Flask-Session==0.8.0
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
-frontend==0.0.3
-frozenlist==1.4.1
-google-api-core==2.23.0
-google-auth==2.36.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.18.2
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-h11==0.14.0
-httpcore==1.0.6
-httplib2==0.22.0
-httpx==0.27.2
+anyio==4.8.0
+attrs==25.1.0
+fastapi==0.115.8
+frozenlist==1.5.0
 idna==3.10
-importlib_resources==6.4.5
-isodate==0.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jiter==0.7.0
-jwt==1.3.1
-looseversion==1.3.0
-lxml==5.3.0
-magic-filter==1.0.12
-Mako==1.3.8
-MarkupSafe==3.0.2
-msgspec==0.18.6
 multidict==6.1.0
-mysql-connector-python==9.1.0
-networkx==3.4.2
-nibabel==5.3.2
-nipype==1.9.1
-numpy==2.1.3
-oauthlib==3.2.2
-openai==1.54.3
-packaging==24.2
-pandas==2.2.3
-passlib==1.7.4
-pathlib==1.0.1
-pdfminer.six==20231228
-pdfplumber==0.11.4
-pillow==11.0.0
-propcache==0.2.0
-proto-plus==1.25.0
-protobuf==5.28.3
-prov==2.0.1
-puremagic==1.28
-pyaes==1.6.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.10.4
-pydantic-settings==2.7.1
+propcache==0.2.1
+pydantic==2.10.6
 pydantic_core==2.27.2
-pydot==3.0.3
-PyMySQL==1.1.1
-pyparsing==3.2.0
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-Pyrogram==2.0.106
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-multipart==0.0.20
-pytils==0.4.1
-pytz==2024.2
-pyxnat==1.6.2
-rdflib==6.3.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-rsa==4.9
-scipy==1.14.1
-simplejson==3.19.3
-six==1.17.0
 sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.36
-starlette==0.41.2
-tiktoken==0.8.0
-tools==0.1.9
-tqdm==4.67.0
-traits==6.4.3
+starlette==0.45.3
 typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-URLObject==2.4.3
-utc==0.0.3
-uvicorn==0.32.0
-Werkzeug==3.1.3
-WTForms==3.2.1
-yarl==1.15.4
+yarl==1.18.3
